--- a/trunk/MagicCarpet/MagicCarpet/MagicCarpet.csproj
+++ b/trunk/MagicCarpet/MagicCarpet/MagicCarpet.csproj
@@ -113,6 +113,9 @@
     <Compile Include="com\xexuxjy\magiccarpet\collision\QuadTree.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\collision\QuadTreeNode.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\collision\TerrainIndicesHolder.cs" />
+    <Compile Include="com\xexuxjy\magiccarpet\gameobjects\GameObjectManager.cs" />
+    <Compile Include="com\xexuxjy\magiccarpet\gameobjects\GameObjectType.cs" />
+    <Compile Include="com\xexuxjy\magiccarpet\gameobjects\ManaBall.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\Globals.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\interfaces\ICamera.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\MagicCarpet.cs" />
@@ -123,7 +126,7 @@
     <Compile Include="com\xexuxjy\magiccarpet\terrain\TerrainSection.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\terrain\TerrainSquare.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\terrain\TerrainType.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\terrain\WorldObject.cs" />
+    <Compile Include="com\xexuxjy\magiccarpet\gameobjects\GameObject.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\util\FrameRateCounter.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\util\KeyboardController.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\util\MathHelperExtension.cs" />
