--- a/trunk/MagicCarpet/ClipTerrainDemo/ClipTerrainDemo/ClipTerrainDemo.csproj
+++ b/trunk/MagicCarpet/ClipTerrainDemo/ClipTerrainDemo/ClipTerrainDemo.csproj
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{529FB650-8C06-441E-92FF-635C0C6A7353}</ProjectGuid>
+    <ProjectGuid>{DE2F22EF-B796-4AE6-9BFC-42D702C296E6}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MagicCarpet</RootNamespace>
-    <AssemblyName>MagicCarpet</AssemblyName>
+    <RootNamespace>ClipTerrainDemo</RootNamespace>
+    <AssemblyName>ClipTerrainDemo</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
     <XnaProfile>HiDef</XnaProfile>
-    <XnaCrossPlatformGroupID>aa9c2323-78f2-429f-9991-10aa04a6f899</XnaCrossPlatformGroupID>
+    <XnaCrossPlatformGroupID>fe598a87-aab6-41d1-b3af-477554e25645</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
     <Thumbnail>GameThumbnail.png</Thumbnail>
@@ -107,47 +107,32 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="com\xexuxjy\magiccarpet\camera\DefaultCamera.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\camera\DHPCameraComponent.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\collision\CollisionManager.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\collision\QuadTree.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\collision\QuadTreeNode.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\collision\TerrainIndicesHolder.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\gameobjects\GameObjectManager.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\gameobjects\GameObjectType.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\gameobjects\ManaBall.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\Globals.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\interfaces\ICamera.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\MagicCarpet.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\Program.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\renderer\DefaultRenderer.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\renderer\TerrainSectionRenderer.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\terrain\Terrain.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\terrain\TerrainSection.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\terrain\TerrainSquare.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\terrain\TerrainType.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\gameobjects\GameObject.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\util\KeyboardController.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\util\MathHelperExtension.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\util\MathUtil.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\util\MouseController.cs" />
+    <Compile Include="ClipTerrain.cs" />
+    <Compile Include="DHPCameraComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Game1.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\bullet-xna\trunk\BulletXNADemos\BulletXNADemos-Windows.csproj">
+    <ProjectReference Include="..\..\..\..\..\bullet-xna\trunk\BulletXNADemos\BulletXNADemos-Windows.csproj">
       <Project>{3E64761A-AC83-4C76-93BE-475F95165560}</Project>
       <Name>BulletXNADemos-Windows</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\bullet-xna\trunk\BulletXNA\BulletXNA-Windows.csproj">
+    <ProjectReference Include="..\..\..\..\..\bullet-xna\trunk\BulletXNADemos\Content\Content.contentproj">
+      <Project>{19F18FB0-6BA5-4076-9E7E-934437CAC410}</Project>
+      <Name>Content</Name>
+      <XnaReferenceType>Content</XnaReferenceType>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\bullet-xna\trunk\BulletXNA\BulletXNA-Windows.csproj">
       <Project>{4E1937EE-3139-44CB-989D-F050BC099CE6}</Project>
       <Name>BulletXNA-Windows</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MagicCarpetContent\MagicCarpetContent.contentproj">
-      <Name>MagicCarpetContent</Name>
+    <ProjectReference Include="..\ClipTerrainDemoContent\ClipTerrainDemoContent.contentproj">
+      <Name>ClipTerrainDemoContent</Name>
       <XnaReferenceType>Content</XnaReferenceType>
     </ProjectReference>
   </ItemGroup>
@@ -178,7 +163,6 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
