--- a/trunk/MagicCarpet/ClipTerrainDemo/ClipTerrainDemo/ClipTerrainDemo.csproj
+++ b/trunk/MagicCarpet/ClipTerrainDemo/ClipTerrainDemo/ClipTerrainDemo.csproj
@@ -107,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClipLevel.cs" />
     <Compile Include="ClipTerrain.cs" />
     <Compile Include="DHPCameraComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -118,16 +119,11 @@
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\bullet-xna\trunk\BulletXNADemos\BulletXNADemos-Windows.csproj">
+    <ProjectReference Include="..\..\..\..\bullet-xna\trunk\BulletXNADemos\BulletXNADemos-Windows.csproj">
       <Project>{3E64761A-AC83-4C76-93BE-475F95165560}</Project>
       <Name>BulletXNADemos-Windows</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\..\bullet-xna\trunk\BulletXNADemos\Content\Content.contentproj">
-      <Project>{19F18FB0-6BA5-4076-9E7E-934437CAC410}</Project>
-      <Name>Content</Name>
-      <XnaReferenceType>Content</XnaReferenceType>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\..\bullet-xna\trunk\BulletXNA\BulletXNA-Windows.csproj">
+    <ProjectReference Include="..\..\..\..\bullet-xna\trunk\BulletXNA\BulletXNA-Windows.csproj">
       <Project>{4E1937EE-3139-44CB-989D-F050BC099CE6}</Project>
       <Name>BulletXNA-Windows</Name>
     </ProjectReference>
