--- a/trunk/MagicCarpet/ClipTerrainDemo/ClipTerrainDemo/ClipTerrainDemo.csproj
+++ b/trunk/MagicCarpet/ClipTerrainDemo/ClipTerrainDemo/ClipTerrainDemo.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClipLevel.cs" />
+    <Compile Include="ClipLevelManager.cs" />
     <Compile Include="ClipTerrain.cs" />
     <Compile Include="DHPCameraComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
