--- a/trunk/MagicCarpet/ClipTerrainDemo/ClipTerrainDemo/ClipTerrainDemo.csproj
+++ b/trunk/MagicCarpet/ClipTerrainDemo/ClipTerrainDemo/ClipTerrainDemo.csproj
@@ -128,11 +128,6 @@
       <Project>{3E64761A-AC83-4C76-93BE-475F95165560}</Project>
       <Name>BulletXNADemos-Windows</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\..\bullet-xna\trunk\BulletXNADemos\Content\Content.contentproj">
-      <Project>{19F18FB0-6BA5-4076-9E7E-934437CAC410}</Project>
-      <Name>Content</Name>
-      <XnaReferenceType>Content</XnaReferenceType>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\..\..\bullet-xna\trunk\BulletXNA\BulletXNA-Windows.csproj">
       <Project>{4E1937EE-3139-44CB-989D-F050BC099CE6}</Project>
       <Name>BulletXNA-Windows</Name>
@@ -142,8 +137,9 @@
       <Name>MagicCarpet</Name>
     </ProjectReference>
     <ProjectReference Include="..\ClipTerrainDemoContent\ClipTerrainDemoContent.contentproj">
-      <Name>ClipTerrainDemoContent</Name>
+      <Name>ClipTerrainDemoContent %28Content%29</Name>
       <XnaReferenceType>Content</XnaReferenceType>
+      <Project>{EA344496-F027-434A-A423-36E985B65C7F}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
