content manager and simple model loading via console

--- a/MagicCarpet/MagicCarpet/MagicCarpet.csproj
+++ b/MagicCarpet/MagicCarpet/MagicCarpet.csproj
@@ -118,7 +118,7 @@
     <Compile Include="com\xexuxjy\magiccarpet\collision\TerrainIndicesHolder.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\gameobjects\Balloon.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\gameobjects\Castle.cs" />
-    <Compile Include="com\xexuxjy\magiccarpet\gameobjects\GameObjectManager.cs" />
+    <Compile Include="com\xexuxjy\magiccarpet\manager\GameObjectManager.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\gameobjects\GameObjectType.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\gameobjects\Magician.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\gameobjects\ManaBall.cs" />
@@ -127,6 +127,7 @@
     <Compile Include="com\xexuxjy\magiccarpet\interfaces\ICamera.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\interfaces\ICollideable.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\MagicCarpet.cs" />
+    <Compile Include="com\xexuxjy\magiccarpet\manager\MCContentManager.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\Program.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\renderer\DefaultRenderer.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\renderer\TerrainSectionRenderer.cs" />
@@ -157,11 +158,16 @@
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\bullet-xna\trunk\BulletXNADemos\BulletXNADemos-Windows.csproj">
+    <ProjectReference Include="..\..\..\bullet-xna\trunk\BulletXNADemos\BulletXNADemos-Windows.csproj">
       <Project>{3E64761A-AC83-4C76-93BE-475F95165560}</Project>
       <Name>BulletXNADemos-Windows</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\bullet-xna\trunk\BulletXNA\BulletXNA-Windows.csproj">
+    <ProjectReference Include="..\..\..\bullet-xna\trunk\BulletXNADemos\Content\BulletXNADemoContent.contentproj">
+      <Project>{19F18FB0-6BA5-4076-9E7E-934437CAC410}</Project>
+      <Name>BulletXNADemoContent %28Content%29</Name>
+      <XnaReferenceType>Content</XnaReferenceType>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\bullet-xna\trunk\BulletXNA\BulletXNA-Windows.csproj">
       <Project>{4E1937EE-3139-44CB-989D-F050BC099CE6}</Project>
       <Name>BulletXNA-Windows</Name>
     </ProjectReference>
